add testing to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,16 @@
-build:
+stages:
+  - build
+  - test
+
+make:
+  stage: build
   script:
     - mkdir build
     - cd build
     - cmake ..
     - make
+run_tests:
+  stage:
+    - test
+  script:
+    - ./ursadb_test
