use clang instead of g++

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ make:
   script:
     - mkdir build
     - cd build
-    - cmake ..
+    - cmake -D CMAKE_C_COMPILER=/usr/bin/clang -D CMAKE_CXX_COMPILER=/usr/bin/clang++ ..
     - make ursadb_test
 run_tests:
   stage: test
