--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,12 @@ cmake_minimum_required(VERSION 3.5)
 project(ursadb)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_COMPILER /usr/bin/g++)
-
-find_package(Boost COMPONENTS filesystem REQUIRED)
-
-include_directories(${Boost_INCLUDE_DIRS})
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(ursadb main.cpp Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp StringParser.cpp)
 
 add_executable(ursadb_test Tests.cpp Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp StringParser.cpp)
 
-target_link_libraries(ursadb ${Boost_LIBRARIES})
-target_link_libraries(ursadb_test ${Boost_LIBRARIES})
+target_link_libraries(ursadb -lstdc++fs)
+
+target_link_libraries(ursadb_test -lstdc++fs)
