--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ add_executable(ursadb main.cpp Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Da
 
 add_executable(ursadb_test Tests.cpp Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp StringParser.cpp)
 
-target_link_libraries(ursadb -lstdc++fs)
+target_link_libraries(ursadb -lstdc++fs -lzmq)
 
-target_link_libraries(ursadb_test -lstdc++fs)
+target_link_libraries(ursadb_test -lstdc++fs -lzmq)
