Work on fixing CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,8 @@ make:
       - build/
   script:
     - mkdir build
-    - which clang
     - cd build
-    - cmake -D CMAKE_C_COMPILER=gcc -D CMAKE_CXX_COMPILER=g++ ..
+    - cmake -D CMAKE_C_COMPILER=gcc-7 -D CMAKE_CXX_COMPILER=g++-7 ..
     - make ursadb_test
 run_tests:
   stage: test
