Sane CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,11 @@ project(ursadb)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(ursadb main.cpp Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp)
+add_library(ursalib STATIC Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp)
+target_link_libraries(ursalib -lstdc++fs -lzmq) 
 
-add_executable(ursadb_test Tests.cpp Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp)
+add_executable(ursadb main.cpp)
+target_link_libraries(ursadb ursalib)
 
-target_link_libraries(ursadb -lstdc++fs -lzmq)
-
-target_link_libraries(ursadb_test -lstdc++fs -lzmq)
+add_executable(ursadb_test Tests.cpp)
+target_link_libraries(ursadb_test ursalib)
