Full make every time

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ make:
     - mkdir build
     - cd build
     - cmake -D CMAKE_C_COMPILER=gcc-7 -D CMAKE_CXX_COMPILER=g++-7 ..
-    - make ursadb_test
+    - make
 run_tests:
   stage: test
   dependencies:
