Remove rest of command line flags, and add compact command, and fix lib name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(ursadb)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(ursalib STATIC Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp)
-target_link_libraries(ursalib -lstdc++fs -lzmq) 
+add_library(ursa STATIC Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp)
+target_link_libraries(ursa -lstdc++fs -lzmq)
 
 add_executable(ursadb main.cpp)
-target_link_libraries(ursadb ursalib)
+target_link_libraries(ursadb ursa)
 
 add_executable(ursadb_test Tests.cpp)
-target_link_libraries(ursadb_test ursalib)
+target_link_libraries(ursadb_test ursa)
