--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_library(ursa STATIC Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp IndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp ExclusiveFile.cpp)
-target_link_libraries(ursa -lstdc++fs -lzmq)
+target_link_libraries(ursa -lstdc++fs -lzmq -pthread)
 
 add_executable(ursadb Daemon.cpp)
 target_link_libraries(ursadb ursa)
