--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "-Wall")
 
-add_library(ursa STATIC Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp VecIndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp ExclusiveFile.cpp DatabaseSnapshot.cpp Task.cpp Indexer.cpp DatabaseHandle.cpp ZHelpers.cpp Responses.cpp)
+add_library(ursa STATIC Utils.cpp OnDiskDataset.cpp DatasetBuilder.cpp Database.cpp OnDiskIndex.cpp FlatIndexBuilder.cpp BitmapIndexBuilder.cpp MemMap.cpp Query.cpp QueryParser.cpp ExclusiveFile.cpp DatabaseSnapshot.cpp Task.cpp Indexer.cpp DatabaseHandle.cpp ZHelpers.cpp Responses.cpp)
 target_link_libraries(ursa -lstdc++fs -lzmq -pthread)
 
 add_executable(ursadb Daemon.cpp NetworkService.cpp)
