--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,7 @@
-image: certpl/docker-ci-base:latest
-
-variables:
-  DOCKER_DRIVER: overlay2
+image: certpl/docker-ci-base
 
 services:
-  - naskpl/dind
+  - docker:dind
 
 stages:
   - build
