Implement streaming iterators
Two new database commands:

select into iterator "query";
iterator "name" pop 30;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(
     STATIC
     Utils.cpp
     OnDiskDataset.cpp
+    OnDiskIterator.cpp
     DatasetBuilder.cpp
     Database.cpp
     Trim.cpp
