--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: DoozyX/clang-format-lint-action@v0.5
-      with:
-        source: '.'
-        extensions: 'h,cpp'
-        clangFormatVersion: 9
+    - name: clang format
+      uses: jidicula/clang-format-action@master
+
