--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -24,6 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: install dependencies
+      run: sudo apt-get install gcc g++ libzmq3-dev cmake build-essential
     - name: configure
       run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
     - name: build
