--- a/libursa/CMakeLists.txt
+++ b/libursa/CMakeLists.txt
@@ -49,7 +49,8 @@ add_library(
     ZHelpers.h
 )
 target_include_directories(
-    ursa PRIVATE .
+    ursa
+    PRIVATE .
     PRIVATE ${PROJECT_BINARY_DIR}/generated)
 target_link_libraries(ursa -lstdc++fs -lzmq -pthread)
 target_clangformat_setup(ursa)
