--- a/libursa/CMakeLists.txt
+++ b/libursa/CMakeLists.txt
@@ -53,7 +53,7 @@ target_include_directories(
     PRIVATE .
     PRIVATE ${PROJECT_BINARY_DIR}/generated
 )
-target_link_libraries(ursa -lstdc++fs -lzmq -pthread)
+target_link_libraries(ursa -lstdc++fs -lzmq -pthread pegtl json spdlog)
 target_enable_ipo(ursa)
 target_clangformat_setup(ursa)
 
