--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: install dependencies
       run: sudo apt-get install gcc g++ libzmq3-dev cmake build-essential git
     - name: configure
