adjust job name to the naming scheme

--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -1,10 +1,10 @@
 on: push
 
-name: Create and build release
+name: Package build
 
 jobs:
   create_release:
-    name: Create release
+    name: build deb
     runs-on: ubuntu-latest
     container: debian:buster
     steps:
