--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -1,21 +1,24 @@
-on:
-  push:
-    tags:        
-      - 'v*'
+on: push
 
-name: Create and build release
+name: Package build
 
 jobs:
   create_release:
-    name: Create release
+    name: build deb
     runs-on: ubuntu-latest
     container: debian:buster
     steps:
+      - name: Install git
+        run: |
+          apt-get update && apt-get install -y git
       - name: Checkout code
         uses: actions/checkout@master
-      - name: Create Release
+        with:
+          submodules: true
+      - name: Create release
         id: create_release
         uses: actions/create-release@latest
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -35,9 +38,16 @@ jobs:
           cpack
           echo "::set-output name=deb_path::$(realpath ursadb*.deb | head -n 1)"
           echo "::set-output name=deb_name::$(realpath ursadb*.deb | head -n 1 | rev | cut -f1 -d/ | rev)"
-      - name: Upload Release Asset
-        id: upload-release-asset 
+      - name: Test package install
+        id: test_package_deb
+        run: |
+          dpkg -i build/ursadb*.deb
+          ursadb_new /tmp/test.ursa
+          ursadb | grep -q Usage
+      - name: Upload Debian package
+        id: upload_release_deb
         uses: actions/upload-release-asset@v1
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
