--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -21,7 +21,7 @@ jobs:
     - name: clang-format
       run: cmake --build build --target format
     - name: check formatting
-      run: git diff --quiet
+      run: git diff --quiet || git diff && false
   run_cmake_build:
     name: run cmake build
     runs-on: ubuntu-latest
