--- a/libursa/CMakeLists.txt
+++ b/libursa/CMakeLists.txt
@@ -60,4 +60,18 @@ target_link_libraries(ursa -lstdc++fs -lzmq -pthread pegtl json spdlog::spdlog)
 target_enable_ipo(ursa)
 target_clangformat_setup(ursa)
 
+find_package(Git)
+if(Git_FOUND)
+    execute_process(
+        COMMAND
+        # get commit shorthash
+        ${GIT_EXECUTABLE} rev-parse --short HEAD
+        OUTPUT_VARIABLE
+        COMMIT_HASH
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+else()
+    message(FATAL_ERROR "Git not found")
+endif()
+
 configure_file(Version.h.in ${PROJECT_BINARY_DIR}/generated/Version.h)
