--- a/.github/workflows/coverity-scan.yml
+++ b/.github/workflows/coverity-scan.yml
@@ -14,7 +14,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y gcc g++ libzmq3-dev cmake build-essential git
       - name: Download Coverity Build Tool
         run: |
-          wget -q https://scan.coverity.com/download/cxx/linux64 --post-data "token=$TOKEN&project=cxx" -O cov-analysis-linux64.tar.gz
+          wget -q https://scan.coverity.com/download/linux64 --post-data "token=$TOKEN&project=CERT-Polska%2Fursadb" -O cov-analysis-linux64.tar.gz
           mkdir cov-analysis-linux64
           tar xzf cov-analysis-linux64.tar.gz --strip 1 -C cov-analysis-linux64
         env:
