--- a/.github/workflows/coverity-scan.yml
+++ b/.github/workflows/coverity-scan.yml
@@ -14,7 +14,7 @@ jobs:
           submodules: true
       - name: Install libraries
         run: |
-          sudo apt-get update && sudo apt-get install -y gcc g++ libzmq3-dev cmake build-essential git
+          sudo apt-get update && sudo apt-get install -y gcc g++ libzmq3-dev cmake build-essential git libedit-dev
       - name: Download Coverity Build Tool
         run: |
           wget -q https://scan.coverity.com/download/linux64 --post-data "token=$TOKEN&project=CERT-Polska%2Fursadb" -O cov-analysis-linux64.tar.gz
