--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         submodules: true
     - name: install dependencies
-      run: sudo apt-get install gcc g++ libzmq3-dev cmake build-essential git
+      run: sudo apt-get install gcc g++ libzmq3-dev cmake build-essential git libedit-dev
     - name: configure
       run: mkdir build && cd build && cmake ..
     - name: clang-format
@@ -30,7 +30,7 @@ jobs:
       with:
         submodules: true
     - name: install dependencies
-      run: sudo apt-get install gcc g++ libzmq3-dev cmake build-essential
+      run: sudo apt-get install gcc g++ libzmq3-dev cmake build-essential git libedit-dev
     - name: configure
       run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
     - name: build
