Refactor qstring, and prepare for a new approach
Change the way qstring works - but also keep legacy API for clients
that don't use EXPERIMENTAL_GRAPH_QUERY mode yet.

--- a/libursa/CMakeLists.txt
+++ b/libursa/CMakeLists.txt
@@ -34,6 +34,8 @@ add_library(
     OnDiskIndex.h
     OnDiskIterator.cpp
     OnDiskIterator.h
+    QString.cpp
+    QString.h
     Query.cpp
     Query.h
     QueryGraph.cpp
