Fix thread safety for tasks (no dangerous shared copies)
This also completely changes how locks work (and makes them more safe)

Ok, so there's a lot going on here. Distinct changes include:

- split `Task` into `Task` and `TaskSpec`. TaskSpec is expected to be thread-
safe (fields are either immutable, or atomic), while Task is private for
a thread (it's written by coordinator, used by worker, and read by coordinator
again).
- locks are acquired synchronically by the coordinator before the worker
even starts executing. This is necessary to avoid subtle race conditions with
snapshots (for example, two iterators returning the same file - think classical
problem with `i++` in multithreaded env)
- some necessary refactorings (like task->changes.emplace_back ->
task->change()). A lot of the code was touched because of the Task split

--- a/libursa/CMakeLists.txt
+++ b/libursa/CMakeLists.txt
@@ -10,8 +10,8 @@ add_library(
     Database.h
     DatabaseConfig.cpp
     DatabaseConfig.h
-    DatabaseHandle.cpp
-    DatabaseHandle.h
+    DatabaseLock.cpp
+    DatabaseLock.h
     DatabaseName.cpp
     DatabaseName.h
     DatabaseSnapshot.cpp
