Make query graphs production ready
- no arbitrary restriction on wide8 queries
- actually unit test them (regression found)
- make query graph expansion faster (validate grams before)

With this change they will be *basically* ready to deploy as a default
configuration. Maybe few more tests and I think we can :shipit:.

--- a/.github/workflows/test_experiments.yml
+++ b/.github/workflows/test_experiments.yml
@@ -38,4 +38,4 @@ jobs:
     - name: build
       run: cd build && make ursadb ursadb_new
     - name: test
-      run: python3 -m pytest
+      run: env EXPERIMENTAL_QUERY_GRAPHS=On python3 -m pytest
