Move querycounters out of queryresults file

--- a/libursa/CMakeLists.txt
+++ b/libursa/CMakeLists.txt
@@ -44,6 +44,8 @@ add_library(
     QString.h
     Query.cpp
     Query.h
+    QueryCounters.cpp
+    QueryCounters.h
     QueryGraph.cpp
     QueryGraph.h
     QueryParser.cpp
