--- a/deploy/k8s/ursadb.yml
+++ b/deploy/k8s/ursadb.yml
@@ -34,6 +34,8 @@ spec:
               name: mquery-nfs-volume-prod
             - mountPath: /mnt/kuku-analyses
               name: mquery-nfs-analyses-volume-prod
+            - mountPath: /mnt/binaries
+              name: mquery-cuckoo-binaries-volume-prod
             - mountPath: /mnt/ursadb-shared
               name: ursadb-index-pv-volume-prod
       dnsPolicy: ClusterFirst
@@ -58,3 +60,6 @@ spec:
         - name: mquery-nfs-analyses-volume-prod
           persistentVolumeClaim:
             claimName: mquery-nfs-analyses-claim-prod
+        - name: mquery-cuckoo-binaries-volume-prod
+          persistentVolumeClaim:
+            claimName: mquery-cuckoo-binaries-pv-claim-prod
