--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,16 @@ target_enable_ipo(ursadb_index)
 target_clangformat_setup(ursadb_index)
 
 add_executable(
+    ursadb_compact
+    src/Environment.cpp
+    src/Environment.h
+    src/Compact.cpp)
+target_include_directories(ursadb_compact PUBLIC ${CMAKE_SOURCE_DIR})
+target_link_libraries(ursadb_compact ursa)
+target_enable_ipo(ursadb_compact)
+target_clangformat_setup(ursadb_compact)
+
+add_executable(
     ursacli
     src/Client.cpp
     src/Client.h
