cmake: use submodules for zmq

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -9,3 +9,19 @@ target_include_directories(pegtl INTERFACE .)
 
 # target spdlog::spdlog
 add_subdirectory(spdlog)
+
+# need libsodium for curve, but curve not used in ursa.
+# so, then we dont need to compile libsodium.
+option(WITH_LIBSODIUM "" OFF)
+option(ENABLE_CURVE "" OFF)
+# websockets requires a TLS library, which we don't have handy.
+# also, ursa doesn't use websockets.
+# so, disable feature to hide warnings during configure.
+option(ENABLE_WS "" OFF)
+# remove extra zmq targets
+option(BUILD_TESTS "" OFF)
+add_subdirectory(libzmq)
+
+# remove extra cppzmq targets
+option(CPPZMQ_BUILD_TESTS "" OFF)
+add_subdirectory(cppzmq)
