--- a/libursa/CMakeLists.txt
+++ b/libursa/CMakeLists.txt
@@ -72,7 +72,9 @@ target_include_directories(
     PRIVATE .
     PRIVATE ${PROJECT_BINARY_DIR}/generated
 )
-target_link_libraries(ursa -lstdc++fs -lzmq -pthread pegtl json spdlog::spdlog)
+target_link_libraries(ursa -lstdc++fs -pthread pegtl json spdlog::spdlog)
+target_link_libraries(ursa libzmq-static)
+target_link_libraries(ursa cppzmq-static)
 target_enable_ipo(ursa)
 target_clangformat_setup(ursa)
 
