--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -36,7 +36,7 @@ jobs:
     - name: find changed files
       run: git diff origin/master --name-only "*.cpp" > /tmp/filestocheck && cat /tmp/filestocheck
     - name: clang-tidy
-      run: clang-tidy $(cat /tmp/filestocheck) -checks="bugprone-*,google-*,modernize-*,performance-*,readability-*" -fix -- -std=c++17 -I extern/ -I extern/spdlog/include/ -I.
+      run: if [ -s /tmp/filestocheck ]; then clang-tidy $(cat /tmp/filestocheck) -checks="bugprone-*,google-*,modernize-*,performance-*,readability-*" -fix -- -std=c++17 -I extern/ -I extern/spdlog/include/ -I.; fi
     - name: FYI git diff
       run: git diff
       if: ${{ always() }}
