--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -32,11 +32,11 @@ jobs:
     - name: checkout master
       run: git fetch origin master
     - name: install dependencies
-      run: sudo apt-get install -y clang-tidy
+      run: sudo apt-get install -y clang-tidy libzmq3-dev
     - name: find changed files
       run: git diff origin/master --name-only "*.cpp" > /tmp/filestocheck && cat /tmp/filestocheck
     - name: clang-tidy
-      run: if [ -s /tmp/filestocheck ]; then clang-tidy $(cat /tmp/filestocheck) -checks="bugprone-*,google-*,modernize-*,performance-*,readability-*" -fix -- -std=c++17 -I extern/ -I extern/spdlog/include/ -I.; fi
+      run: if [ -s /tmp/filestocheck ]; then clang-tidy $(cat /tmp/filestocheck) -checks="bugprone-*,google-*,performance-*,readability-*" -fix -- -std=c++17 -I extern/ -I extern/spdlog/include/ -I.; fi
     - name: FYI git diff
       run: git diff
       if: ${{ always() }}
