Fix problems with the package build step

--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -1,7 +1,11 @@
-on: push
-
 name: Package build
-
+on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
 jobs:
   create_release:
     name: build deb
