--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library(pegtl INTERFACE)
 target_include_directories(pegtl INTERFACE .)
 
 # target spdlog::spdlog
-add_subdirectory(spdlog)
+add_subdirectory(spdlog EXCLUDE_FROM_ALL)
 
 # need libsodium for curve, but curve not used in ursa.
 # so, then we dont need to compile libsodium.
@@ -20,8 +20,8 @@ option(ENABLE_CURVE "" OFF)
 option(ENABLE_WS "" OFF)
 # remove extra zmq targets
 option(BUILD_TESTS "" OFF)
-add_subdirectory(libzmq)
+add_subdirectory(libzmq EXCLUDE_FROM_ALL)
 
 # remove extra cppzmq targets
 option(CPPZMQ_BUILD_TESTS "" OFF)
-add_subdirectory(cppzmq)
+add_subdirectory(cppzmq EXCLUDE_FROM_ALL)
