--- a/.github/workflows/push_hub.yml
+++ b/.github/workflows/push_hub.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Build and push the image
         uses: docker/build-push-action@v1.1.0
         with:
