Lower iopriority when indexing to IDLE

--- a/libursa/CMakeLists.txt
+++ b/libursa/CMakeLists.txt
@@ -29,6 +29,8 @@ add_library(
     IndexBuilder.h
     Indexer.cpp
     Indexer.h
+    IoPrio.cpp
+    IoPrio.h
     Json.h
     MemMap.cpp
     MemMap.h
