--- a/libursa/Version.h.in
+++ b/libursa/Version.h.in
@@ -9,4 +9,4 @@ constexpr std::string_view ursadb_format_version = "1.5.0";
 // Project version.
 // Consider updating the version tag when doing PRs.
 constexpr std::string_view ursadb_version_string =
-    "@PROJECT_VERSION@+primitives";
+    "@PROJECT_VERSION@+debuglogs";
