--- a/libursa/Version.h.in
+++ b/libursa/Version.h.in
@@ -8,5 +8,6 @@ constexpr std::string_view ursadb_format_version = "1.5.0";
 
 // Project version.
 // Consider updating the version tag when doing PRs.
-constexpr std::string_view ursadb_version_string =
-    "@PROJECT_VERSION@+debuglogs";
+// clang-format off
+constexpr std::string_view ursadb_version_string = "@PROJECT_VERSION@+opt0";
+// clang-format on
